--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Sleep Outside | Home</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="icon" href="public/images/noun_Tent_2517.svg" type="image/svg+xml" />
-    <script type="module" src="/js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
   </head>
 
   <body>
