--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -30,8 +30,15 @@
         <p id="productColor" class="product__color">Color</p>
         <p id="productDesc" class="product__description">Description</p>
         <div class="product-detail__add">
-          <label>Qty:
-            <input type="number" id="productQuantity" type="number" value="1" min="1" />
+          <label
+            >Qty:
+            <input
+              type="number"
+              id="productQuantity"
+              type="number"
+              value="1"
+              min="1"
+            />
           </label>
         </div>
         <button id="addToCartButton" data-id="productId">Add to Cart</button>
