Fixed issues with not loading header and footer correctly on RENDER

--- a/src/product_listing/index.html
+++ b/src/product_listing/index.html
@@ -13,7 +13,7 @@
     <script type="module" src="../js/product-listing.js"></script>
   </head>
   <body>
-    <header class="divider" id="header"></header>
+    <header class="divider" id="main-header"></header>
     <main class="divider">
       <div class="hero">
         <img
@@ -43,6 +43,6 @@
         <ul class="product-list"></ul>
       </section>
     </main>
-    <footer id="footer"></footer>
+    <footer id="main-footer"></footer>
   </body>
 </html>
