--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <header class="divider" id="header"></header>
+    <header class="divider" id="main-header"></header>
 
     <main class="divider">
       <section class="products">
@@ -58,6 +58,6 @@
       </section>
     </main>
 
-    <footer id="footer"></footer>
+    <footer id="main-footer"></footer>
   </body>
 </html>
