--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <header class="divider" id="header"></header>
+    <header class="divider" id="main-header"></header>
     <main class="divider">
       <div class="hero">
         <img
@@ -64,6 +64,6 @@
         </a>
       </div>
     </main>
-    <footer id="footer"></footer>
+    <footer id="main-footer"></footer>
   </body>
 </html>
