--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <header class="divider" id="header"></header>
+    <header class="divider" id="main-header"></header>
 
     <main class="divider">
       <section class="product-detail">
@@ -45,6 +45,6 @@
       </section>
     </main>
 
-    <footer id="footer"></footer>
+    <footer id="main-footer"></footer>
   </body>
 </html>
