--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -55,6 +55,9 @@
         <div class="cart-footer hide">
           <p class="cart-total">Total: $0.00</p>
         </div>
+        <div class="checkout-button">
+          <button onclick="location.href='../checkout/index.html'">Proceed to Checkout</button>
+        </div>
       </section>
     </main>
 
